docs: document and refine match and player list services